# ThePitBoard

./: .gitignore  README.md  db.sqlite3  pyproject.toml
appuser/: admin.py  forms.py  models.py  views.py
appuser/management/commands/: racerlist.py  tally.py
appuser/migrations/: 0001_initial.py
authentication/: forms.py  views.py
conf/: cron.py  settings.py  urls.py
notification/: models.py  views.py
notification/migrations/: 0001_initial.py
post/: admin.py  forms.py  models.py  views.py
post/migrations/: 0001_initial.py
raceapi/: admin.py  apps.py  models.py  views.py
raceapi/migrations/: 0001_initial.py
templates/: generic_form.html  index.html  leaderboard.html  login.html  notification_view.html  post_test.html  profile.html  standings_detail.html  user_drivers.html  user_follow.html
